# customer_behaviour_pipeline

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose-metabase.yml  docker-compose.yml  pyproject.toml  setup_customer_behavior_project.sh
airflow_scripts/: entrypoint.sh  init_connections.sh
customer_behaviour_pipeline/: Dockerfile  pyproject.toml
customer_behaviour_pipeline/customer_behaviour/functions/: bronze_ingestion.py  silver_transformation.py
customer_behaviour_pipeline/dags/: dag_workflow.py
dbt_project_cbp/: dbt_project.yml  package-lock.yml  packages.yml
dbt_project_cbp/models/: bronze_layer_gcs_bucket.yml  staging_events.sql  staging_product.sql  staging_product_category.sql  staging_user_session.sql
dbt_project_cbp/models/gold/gold_high_traffic_days/: gold_high_traffic_days.sql
dbt_project_cbp/models/gold/gold_most_popular_brand/: gold_most_popular_brand.sql
dbt_project_cbp/models/gold/gold_most_popular_category/: gold_most_popular_category.sql
dbt_project_cbp/models/gold/gold_most_popular_product/: gold_most_popular_product.sql
dbt_project_cbp/models/gold/gold_most_recent_users/: gold_most_recent_users.sql
dbt_project_cbp/models/gold/gold_sessions_per_user/: gold_sessions_per_user.sql
dbt_project_cbp/models/silver/silver_events/: silver_events.sql  silver_events_schema.yml
dbt_project_cbp/models/silver/silver_product/: silver_product.sql  silver_product_schema.yml
dbt_project_cbp/models/silver/silver_product_category/: silver_product_category.sql  silver_product_category_schema.yml
(+2 files in other folders)
