[tool.poetry]
name = "customer-behaviour-pipeline"
version = "0.1.0"
description = ""
authors = ["Jody Jones <drjodyannjones@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.3"
apache-airflow-providers-postgres = "^5.14.0"
pyspark = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
