[tool.poetry]
name = "customer-behaviour-pipeline"
version = "0.1.0"
description = ""
authors = ["Jody Jones <drjodyannjones@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.5.3"
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
